--- a/.github/workflows/build_windows.yml
+++ b/.github/workflows/build_windows.yml
@@ -97,7 +97,7 @@ jobs:
         cmake .. -G "Visual Studio 16 2019" -A x64 -DCMAKE_BUILD_TYPE=Release
         cmake --build . --config Release
 
-    # 5. EMPAQUETADO DE DLLs (ACTUALIZADO CON ARCHIVE)
+    # 5. EMPAQUETADO DE DLLs (INCLUYE CRYPTO/SSL)
     - name: Deep Bundle DLLs
       shell: bash -l {0}
       run: |
@@ -111,11 +111,12 @@ jobs:
         exe_dir = 'build/Release'
         print(f'Buscando DLLs recursivamente en: {src_root}')
         
-        # LISTA EXTENDIDA PARA NO FALLAR MÁS
+        # LISTA EXTENDIDA PARA CUBRIR DEPENDENCIAS DE OPENSSL
         dll_keywords = [
             'pcl', 'boost', 'gdal', 'opencv', 'tbb', 
             'zlib', 'jpeg', 'tiff', 'geos', 'proj',
-            'archive', 'bz2', 'lzma', 'iconv', 'zstd', 'xml'
+            'archive', 'bz2', 'lzma', 'iconv', 'zstd', 'xml',
+            'crypto', 'ssl', 'curl'  # <-- LOS NUEVOS INVITADOS
         ]
         
         count = 0
@@ -139,6 +140,6 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-artifact@v4
       with:
-        name: odm_orthophoto_full_pack_v4
+        name: odm_orthophoto_full_pack_v5
         path: build/Release/
         compression-level: 0
